# Process this file with autoconf to produce a configure script.

# init autoconf (and check for presence of ChangeLog)
AC_INIT([gdbproxy], [0.7.2], [http://gdbproxy.sourceforge.net/])

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE

AM_CONFIG_HEADER(config.h)

# Check for programs
AC_PROG_MAKE_SET
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT

AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(syslog.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(getopt.h)

dnl add warning options if GCC
if test "x$GCC" = "xyes"; then
  CFLAGS="$CFLAGS -Wall -Wshadow -Wpointer-arith -Wbad-function-cast -Wcast-qual -Wcast-align -Wwrite-strings -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Winline"
else
  echo "gcc not found, it is required to build this program"
  exit 1
fi

AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_TYPE_UID_T

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday select socket getopt_long_only)

if test "$ac_cv_func_getopt_long_only" != "yes" ; then 
    AC_LIBOBJ(getopt)
    AC_LIBOBJ(getopt1)
fi

if test "$host_os" = "mingw32" ; then
    LIBS="$LIBS -lws2_32 -liberty"
fi

if test "$host_os" = "cygwin" ; then
    CFLAGS="$CFLAGS -mno-cygwin"
    LIBS="$LIBS -lws2_32 -lsetupapi"
fi

AC_CHECK_FILES([target_skeleton.c])
AC_CHECK_FILES([target_msp430.c])

AC_CONFIG_FILES(Makefile)

AC_OUTPUT

